--- a/css/main.css
+++ b/css/main.css
@@ -152,3 +152,19 @@ a{
   width:100px;
   height:100px;
 }
+
+#languageSelector{
+  position:absolute;
+  top:10px;
+  right:10px;
+  z-index:1;
+}
+#languageSelector select{
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 14px;
+  padding: 2px 10px;
+  outline:none;
+}
+#languageSelector select *{
+  font-family: 'IBM Plex Mono', sans-serif;
+}
